// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assessment render() renders a fully supported app 1`] = `
"
Assessment for "myapp" (env: dev)

Resources

┌──────────┬──────────┬─────────┬──────────┬──────────┐
│ Category │ Resource │ Service │ Generate │ Refactor │
├──────────┼──────────┼─────────┼──────────┼──────────┤
│ auth     │ pool     │ Cognito │ ✔        │ ✔        │
├──────────┼──────────┼─────────┼──────────┼──────────┤
│ storage  │ bucket   │ S3      │ ✔        │ ✔        │
└──────────┴──────────┴─────────┴──────────┴──────────┘

Features

┌──────┬──────┬──────────┬──────────┐
│ Name │ Path │ Generate │ Refactor │
└──────┴──────┴──────────┴──────────┘"
`;

exports[`Assessment render() renders an app blocked by unsupported refactor 1`] = `
"
Assessment for "myapp" (env: dev)

Resources

┌──────────┬──────────┬──────────┬────────────────────────────────┬────────────────────────────────────┐
│ Category │ Resource │ Service  │ Generate                       │ Refactor                           │
├──────────┼──────────┼──────────┼────────────────────────────────┼────────────────────────────────────┤
│ auth     │ pool     │ Cognito  │ ✔                              │ ✔                                  │
├──────────┼──────────┼──────────┼────────────────────────────────┼────────────────────────────────────┤
│ geo      │ map      │ Location │ ✘ requires manual code editing │ ✘ requires manual data replication │
└──────────┴──────────┴──────────┴────────────────────────────────┴────────────────────────────────────┘

Features

┌──────┬──────┬──────────┬──────────┐
│ Name │ Path │ Generate │ Refactor │
└──────┴──────┴──────────┴──────────┘"
`;

exports[`Assessment render() renders features table when features are detected 1`] = `
"
Assessment for "myapp" (env: dev)

Resources

┌──────────┬──────────┬─────────┬──────────┬──────────┐
│ Category │ Resource │ Service │ Generate │ Refactor │
├──────────┼──────────┼─────────┼──────────┼──────────┤
│ function │ myFunc   │ Lambda  │ ✔        │ —        │
└──────────┴──────────┴─────────┴──────────┴──────────┘

Features

┌─────────────────┬──────────────────────────────────────┬────────────────────────────────┬──────────┐
│ Name            │ Path                                 │ Generate                       │ Refactor │
├─────────────────┼──────────────────────────────────────┼────────────────────────────────┼──────────┤
│ Custom policies │ function/myFunc/custom-policies.json │ ✘ requires manual code editing │ —        │
└─────────────────┴──────────────────────────────────────┴────────────────────────────────┴──────────┘"
`;

exports[`Assessment render() renders step-scoped view for generate 1`] = `
"
Assessment for "myapp" (env: dev)

Resources

┌──────────┬──────────┬────────────────┬────────────────────────────────┐
│ Category │ Resource │ Service        │ Support                        │
├──────────┼──────────┼────────────────┼────────────────────────────────┤
│ auth     │ pool     │ Cognito        │ ✔                              │
├──────────┼──────────┼────────────────┼────────────────────────────────┤
│ custom   │ alarms   │ CloudFormation │ ✘ requires manual code editing │
└──────────┴──────────┴────────────────┴────────────────────────────────┘

Features

┌──────┬──────┬─────────┐
│ Name │ Path │ Support │
└──────┴──────┴─────────┘"
`;
